# fwk

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
application/: CMakeLists.txt
application/examples/: CMakeLists.txt
application/examples/nanopb/: CMakeLists.txt
application/examples/netx/: CMakeLists.txt  client.c
application/examples/test/: CMakeLists.txt  test.c
application/tools/: CMakeLists.txt
application/tools/system_proxy/: README.md
frameworks/: CMakeLists.txt
frameworks/cmake/: esp-idf.cmake
frameworks/elib/: CMakeLists.txt
frameworks/elib/easylogger/: CMakeLists.txt
frameworks/elib/easylogger/port/: elog_port.c
frameworks/elib/flashdb/: CMakeLists.txt
frameworks/elib/quirc/: CMakeLists.txt
frameworks/mlib/: CMakeLists.txt
frameworks/mlib/mlist/: CMakeLists.txt
frameworks/mlib/mlist/mlist/: mlist.h
frameworks/mlib/mmem_debug/: CMakeLists.txt  LICENSE  README.md  make.sh
frameworks/mlib/mmem_debug/adapter/: CMakeLists.txt  README.md  adapter.c  adapter.h
frameworks/mlib/mmem_debug/include/: mmem_debug.h  mmem_dump.h
frameworks/mlib/mmem_debug/src/: mmem_debug.c
frameworks/mlib/mmem_debug/test/: CMakeLists.txt  README.md
frameworks/mlib/mmem_debug/test/include/: common.h
frameworks/mlib/mmem_debug/test/tests/: 00_template.c  01_malloc_test.c  02_free_test.c  03_calloc_test.c  04_realloc_test.c  05_free_all_test.c  06_dump_test_cmd.c  07_dump_test_counts.c  07_dump_test_counts_err.c  08_dump_test_mmem_info.c  08_dump_test_mmem_info_err.c  09_dump_test_mmem_block_info.c  09_dump_test_mmem_block_info_err.c
frameworks/mlib/mmem_debug/test/valgrind/: README.md  double_free.supp
frameworks/mlib/netx/: CMakeLists.txt  netx.c  netx.h
frameworks/mlib/netx/examples/: server.c
frameworks/mlib/osal/: .gitignore  CMakeLists.txt  Doxyfile  README.md  osal.c
frameworks/mlib/osal/src/: osal_api.h  osal_freertos.c  osal_freertos.h  osal_lock_free_queue.c  osal_lock_free_queue.h  osal_posix.c  osal_posix.h
frameworks/mlib/osal/test/: CMakeLists.txt  main.c
frameworks/mlib/osal/test/include/: common.h
frameworks/mlib/osal/test/tests/: 00_template.c  01_get_version.c  01_uptime.c  02_mem_calloc.c  02_mem_malloc.c  02_mem_realloc.c  03_task1.c
frameworks/mlib/osal/testsuites/: CMakeLists.txt  osal_test.c
frameworks/mlib/osal/testsuites/include/: common.h
frameworks/mlib/osal/testsuites/mem/: t_osal_mem.c  t_osal_mem.h  t_osal_mem_001.c  t_osal_mem_002.c  t_osal_mem_003.c
frameworks/mlib/osal/testsuites/misc/: t_osal_misc.c  t_osal_misc.h  t_osal_misc_001.c  t_osal_misc_002.c
frameworks/mlib/osal/testsuites/mq/: t_osal_mq.c  t_osal_mq.h  t_osal_mq_001.c
frameworks/mlib/osal/testsuites/sem/: t_osal_sem.c  t_osal_sem.h  t_osal_sem_001.c  t_osal_sem_002.c  t_osal_sem_003.c
frameworks/mlib/osal/testsuites/task/: t_osal_task.c  t_osal_task.h  t_osal_task_001.c  t_osal_task_002.c  t_osal_task_003.c
frameworks/mlib/osal/tmp/: pthread_attr_init.c  pthread_create.c  pthread_mutex_init.c  pthread_mutex_lock.c  sem_init.c  sem_wait.c
frameworks/shfile/: make.sh
